--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,6 +20,8 @@ body {
 
 .chat-container {
     width: 100%;
+    max-height: 500px;
+    height: 100%;
     max-width: 400px;
     background-color: white;
     border-radius: 10px;
