--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,8 +20,7 @@ body {
 
 .chat-container {
     width: 100%;
-    max-height: 500px;
-    height: 100%;
+    height: 500px;
     max-width: 400px;
     background-color: white;
     border-radius: 10px;
