css button update

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -110,7 +110,7 @@ body {
 }
 
 .chat-input button {
-    background-color: #60725F; /* NovaSkin green background for button */
+    background-color: #187000; /* NovaSkin green background for button */
     color: white;
     border: none;
     outline: none;
