--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body class="home">
     <div class="chat-container">       
         <div class="chat-output" id="chat-output">
-            <div class="message bot" id="greeting"><strong>GroeimetAI-Advanced:</strong> Hallo! Ik ben GroeimetAi-Advanced, uw deskundige digitale assistent. Ik ben uitgerust met een krachtige kennisdatabase waarmee ik snel gespecialiseerde informatie kan opzoeken. Als u complexe of specifieke vragen heeft, ben ik hier om u te helpen.<span class="timestamp-greeting" style="float: left;"></span></div>
+            <div class="message bot" id="greeting"><strong>GroeimetAI-Advanced:</strong> Hallo! Ik ben GroeimetAi-Advanced, uw deskundige digitale assistent. Ik ben uitgerust met een krachtige kennisdatabase waarmee ik snel gespecialiseerde informatie over GroeimetAi kan opzoeken. Als u complexe of specifieke vragen heeft, ben ik hier om u te helpen.<span class="timestamp-greeting" style="float: left;"></span></div>
         </div>
         <div class="chat-input">
             <div class="typing-indicator" id="typing-indicator">GroeimetAI is typing...</div>
