--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,12 @@
             <div class="message bot" id="greeting"><strong>GroeimetAI-Advanced:</strong> Hallo! Ik ben GroeimetAi-Advanced, uw deskundige digitale assistent. Ik ben uitgerust met een krachtige kennisdatabase waarmee ik snel gespecialiseerde informatie over GroeimetAi kan opzoeken. Als u complexe of specifieke vragen heeft, ben ik hier om u te helpen.<span class="timestamp-greeting" style="float: left;"></span></div>
         </div>
         <div class="chat-input">
+            <div class="char-counter"> <span id="char-counter">0/140 karakters</span> </div>
             <div class="typing-indicator" id="typing-indicator">GroeimetAI is typing...</div>
             <input type="text" id="input-message" placeholder="Type your message here..." onkeydown="disableInput()" />
             <button id="send-btn">Send</button>
-        </div>
+          </div>
+          
     </div>
 
     <script src="/static/js/chatbot.js"></script>
