--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -119,7 +119,7 @@ body {
 }
 
 .chat-input button {
-    background-color: #187000; /* NovaSkin green background for button */
+    background-color: #187000; 
     color: white;
     border: none;
     outline: none;
